[gd_scene load_steps=5 format=2]

[ext_resource path="res://Towers/MagneTower.gd" type="Script" id=1]
[ext_resource path="res://Towers/data/000.png" type="Texture" id=2]
[ext_resource path="res://Towers/data/006-trimmed.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 137.702

[node name="MagneTower" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
sight_range = 200
rot_speed = 0.1
DAMAGE = 10
COST = 20
LASER_COLOR = Color( 0.230713, 0.751219, 0.820312, 1 )
MAX_LEVEL = 3
EFFECT_INTENSITY = 0.5
EFFECT_DURATION = 1.5

[node name="tower" type="Sprite" parent="." index="0"]

scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -15, -48 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="targetting_laser" type="RayCast2D" parent="tower" index="0"]

enabled = false
exclude_parent = true
cast_to = Vector2( 0, -200 )
collision_mask = 1

[node name="turret" type="Sprite" parent="tower" index="1"]

show_behind_parent = true
position = Vector2( 0, -12.075 )
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="turret2" type="Sprite" parent="tower" index="2"]

visible = false
show_behind_parent = true
position = Vector2( 0, -17 )
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="turret3" type="Sprite" parent="tower" index="3"]

visible = false
show_behind_parent = true
position = Vector2( 0, -22 )
texture = ExtResource( 3 )
offset = Vector2( 0, -5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="SensorRange" type="Area2D" parent="." index="1"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorRange" index="0"]

shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="area_entered" from="SensorRange" to="." method="_on_SensorRange_area_entered"]

[connection signal="area_exited" from="SensorRange" to="." method="_on_SensorRange_area_exited"]

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]


